# dreaming-health-100

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/video_vectorstore/: index.pkl
llm/: create_vectorstore.py  model.py  vectorstore.py
src/: additional_measurements.py  query_manage.py
